--- a/internet-store-frontend/src/shared/ui/Header/Header.module.css
+++ b/internet-store-frontend/src/shared/ui/Header/Header.module.css
@@ -1,9 +1,9 @@
 header{
 	background: linear-gradient(90deg, #796DE2 0%, #3F6AC9 100%);
 	color: white;
-	height: 120px;
+	max-height: 120px;
 	padding-top: 2%;
-	width: 100%;
+	max-width: 100%;
 }
 
 
@@ -13,9 +13,9 @@ header{
 	text-align: center;
 	padding-left: 10%;
 	padding-right: 10%;
-	padding-top: 1%;
 	padding-bottom: 2%;
 }
+
 
 .logo{
 	margin-right: 3rem;
@@ -26,11 +26,11 @@ header{
 	display: flex;
 	justify-content: space-between;
 	margin-left: 1rem;
-	padding-right: 2%;
-	padding-left: 2%;
+	padding-right: 0.5%;
+	padding-left: 0.5%;
 	width: 951px;
 	height: 61px;
-	border-radius: 18px;
+	border-radius: 20px;
 	background-color: white;
 	align-items: center;
 }
@@ -41,7 +41,7 @@ header{
 	background: rgba(121, 109, 226, 1);
 	padding-left: 1.5rem;
 	width: 150px;
-	border-radius: 18px;
+	border-radius: 16px;
 	align-items: center;
 }
 
@@ -65,53 +65,35 @@ header{
 
 .personActivities{
 	display: flex;
-	margin-left: 4.5rem;
+	margin-top: 1rem;
+	margin-left: 4.3rem;
 }
 
 
 .svgOfPersonActivities{
-	margin-top: -1rem;
+	margin-top: -3rem;
 }
 
 
-.favorites{
-	height: 20px;
+.divForSvgOfPersonActivities{
+	margin-bottom: -80px;
+	height: 40px;
+	width: 40px;
 }
 
 
 .shoppingCart{
 	margin-left: 2rem;
-	margin-right: 2rem;
-	height: 20px;
-}
-
-
-.leftWhell{
-	margin-top: 20px;
-	margin-left: 7px;
-	position: absolute;
-}
-
-
-.rightwhell{
-	margin-top: 20px;
-	margin-left: -8px;
-	position: absolute;
-}
-
-
-.evnironmentsForProfile{
-	position: absolute;
-	margin-left: -3px;
-	margin-top: -3px;
-}
-
-
-.profile{
-	height: 20px;
+	margin-right: 2.2rem;
+	margin-top: -54px;
 }
 
 
 .textOfPersonActivities{
-	margin-top: 1rem;
+	margin-top: 5rem;
+}
+
+
+.testForShoppingCart{
+	margin-top: 86px;
 }
