refactor code and continue create app

--- a/internet-store-frontend/src/shared/ui/Button.module.css
+++ b/internet-store-frontend/src/shared/ui/Button.module.css
@@ -1,9 +1,9 @@
 .button {
 	margin-top: 1rem;
-	width: 316px;
-	height: 65px;
+	width: 290px;
+	height: 60px;
   border-radius: 35px;
-	font-size: x-large;
+	font-size: large;
 }
 
 
