refactor code + test redis + add quick view for catalog

--- a/internet-store-frontend/src/entities/product/ui/ProductCard.module.css
+++ b/internet-store-frontend/src/entities/product/ui/ProductCard.module.css
@@ -24,12 +24,8 @@
 }
 
 
-.divForButtonsAndHeart{
-	display: flex;
-	align-items: center;
-}
-
-
-.heart{
-	margin-left: 15px;
+.fastView{
+	position: absolute;
+	margin-top: -75px;
+	margin-left: 8px;
 }
