--- a/internet-store-frontend/src/pages/shoppingCart/ui/CartSummary.module.css
+++ b/internet-store-frontend/src/pages/shoppingCart/ui/CartSummary.module.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	padding-top: 10px;
 	padding-left: 25px;
-	margin-left: 60%;
+	margin-left: auto;
 	background-color: white;
 	border-radius: 30px;
 	height: 292px;
