--- a/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ImagesCarousel.module.css
+++ b/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ImagesCarousel.module.css
@@ -1,33 +1,48 @@
 .imagesCarousel {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-right: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 3%;
 }
-
 
 .changePhotoUp {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
-
 
 .imageCarousel {
-	width: 124px;
-	height: 92px;
-	border-radius: 15px;
-	margin-top: 6px;
-	margin-bottom: 6px;
-	padding: 2px;
-	box-sizing: border-box;
+  width: 124px;
+  height: 92px;
+  border-radius: 15px;
+  padding: 2px;
+  box-sizing: border-box;
+  cursor: pointer;
 }
-
-
-.changePhotoDown {
-	margin-top: 20px;
-}
-
 
 .activeImage {
-	border: 2px solid #796DE2;
-	padding: 3px;
+  border: 3px solid #796de2;
+  padding: 4px;
+}
+
+.changePhotoDown {
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.scrollWrapper {
+  width: 124px;
+  height: 310px;
+  overflow-y: scroll;
+  margin-top: 10px;
+  scrollbar-width: none;
+}
+
+.scrollWrapper::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollContent {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
