--- a/internet-store-frontend/src/entities/product/ui/QuickView.module.css
+++ b/internet-store-frontend/src/entities/product/ui/QuickView.module.css
@@ -19,6 +19,10 @@
   background: rgba(220, 220, 220, 0.95);
   padding: 10px;
 	display: flex;
+	position: relative;
+  width: 1030px;
+  max-height: 610px;
+  overflow: hidden;
 }
 
 
@@ -48,7 +52,15 @@
 
 
 .descriptionOfQuickView{
-	margin-bottom: 185px;
+	margin-bottom: 0px;
+}
+
+
+.productActions{
+	position: absolute;
+  bottom: 20px;
+  left: 765px;
+  right: 10px;
 }
 
 
