--- a/internet-store-frontend/src/pages/welcome/WelcomePage.module.css
+++ b/internet-store-frontend/src/pages/welcome/WelcomePage.module.css
@@ -5,7 +5,25 @@
 }
 
 
-.welcomeHeaderText{
-	margin-left: 39%;
-	margin-bottom: 5%;
+.divWelcomeHeaderText{
+	display: flex;
+	align-items: center;
+}
+
+
+.dotImg{
+	margin-left: 38%;
+	margin-right: 1%;
+}
+
+
+.hr{
+	color: #4E53D9;
+}
+
+.welcomeText{
+	margin-left: 3%;
+	margin-right: 3%;
+	margin-bottom: 70px;
+	text-align: center;
 }
