--- a/internet-store-frontend/src/shared/ui/Fotter/Footer.module.css
+++ b/internet-store-frontend/src/shared/ui/Fotter/Footer.module.css
@@ -1,7 +1,5 @@
 .footer {
-  background-color: #bebebe;
+  background-color: #d3d3d3;
   width: 100%;
   height: 100px;
-	position: fixed;
-  bottom: -100px;
 }
