--- a/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/Review/Review.module.css
+++ b/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/Review/Review.module.css
@@ -3,75 +3,26 @@
 }
 
 
-.logo{
-	width: 55px;
-	height: 55px;
-}
-
-
-.dataReview{
-	margin-top: -15px;
-	margin-left: 10px;
-}
-
-
-.userNameReview{
-	color: #492DBB;
-}
-
-
-.dateReview{
-	margin-top: -10px;
-	color: #989898;
-}
-
-
-.textReview{
-	font-weight: bold;
-	margin-top: -5px;
-	font-size: 14px;
-}
-
-
-.countHeartReview{
-	font-size: 18px;
-}
-
-
 .heartReview{
 	margin-bottom: 100px;
 	margin-left: auto;
 }
 
 
-.divComment{
-	display: flex;
-	align-items: center;
-}
-
-
-.divCommentText{
-	text-decoration: underline;
-}
-
-
-.openCommetns{
-	margin-left: 10px;
-	width: 13.2px;
-	height: 7.18px;
-}
-
-
-.openCommetns {
-  transition: transform 0.3s ease;
-}
-
-
-.rotate {
-  transform: rotate(180deg);
-}
-
-
 .divForComments{
 	margin-left: 63px;
+}
+
+
+.imagesCommentReview{
+	display: flex;
+}
+
+
+.imgageCommentReview{
+	margin-right: 5px;
+	width: 50px;
+	height: 50px;
+	border-radius: 10px;
+	border: 1px solid #492DBB;
 }
