--- a/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ImageModal.module.css
+++ b/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ImageModal.module.css
@@ -62,7 +62,7 @@
 	padding: 5px 15px;
   position: absolute;
   bottom: 3.5px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
   color: white;
   text-align: center;
   width: 100%;
@@ -93,8 +93,14 @@
 }
 
 
-.mainTextCommentREview{
+.mainTextCommentReview{
 	margin-top: -10px;
 	font-size: 14px;
 	text-align: left;
+}
+
+
+.expandText{
+	color: #5d3ae9;
+	cursor: pointer;
 }
