--- a/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ReviewCommentData.module.css
+++ b/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ReviewCommentData.module.css
@@ -14,25 +14,6 @@
 }
 
 
-.imagesCommentReview{
-	margin-top: 16px;
-	margin-left: 90px;
-	position: absolute;
-	display: flex;
-	z-index: 0;
-}
-
-
-.imgageCommentReview{
-	cursor: pointer;
-	margin-right: 5px;
-	width: 50px;
-	height: 50px;
-	border-radius: 10px;
-	border: 1px solid #492DBB;
-}
-
-
 .dataReview{
 	margin-top: -15px;
 	margin-left: 10px;
@@ -40,7 +21,7 @@
 
 
 .userNameReview{
-	color: #492DBB;
+	color: #5d3ae9;
 }
 
 
@@ -64,50 +45,6 @@
 .heartReview{
 	margin-bottom: 100px;
 	margin-left: auto;
-}
-
-
-.divReviewCommentActions{
-	display: flex;
-	align-items: center;
-}
-
-
-.divComment{
-	margin-right: 12px;
-	display: flex;
-	align-items: center;
-}
-
-
-.openReviewForm{
-	display: flex;
-	align-items: center;
-}
-
-
-.divCommentText{
-	font-weight: bold;
-	text-decoration: underline;
-}
-
-
-.imgOfReviewForm{
-	cursor: pointer;
-	margin-left: 5px;
-}
-
-
-.openComments{
-	cursor: pointer;
-	margin-left: 5px;
-	width: 13.2px;
-	height: 7.18px;
-}
-
-
-.openComments {
-  transition: transform 0.3s ease;
 }
 
 
