--- a/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ReviewsContainer/ReviewsContainer.module.css
+++ b/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ReviewsContainer/ReviewsContainer.module.css
@@ -19,10 +19,33 @@
 .sortTextHeaderReviews{
 	color: #989898;
 	margin-right: 10px;
+	margin-top: 20px;
+}
+
+
+.divForSort{
+	margin-bottom: -3px;
+}
+
+
+.openCloseFormForSendNewReview{
+	height: 34px;
+	padding-top: 4px;
+	padding-bottom: 7px;
+	padding-left: 13px;
+	padding-right: 13px;
+	background: linear-gradient(90deg, #5A3DE6 0%, #3F6AC9 100%);
+	border-radius: 20px;
+	border: 1px solid;
+	color: white;
+	font-size: 15px;
+	margin-right: 15px;
+	margin-bottom: 5px;
 }
 
 
 .divForHeart{
+	align-items: center;
 	margin-left: auto;
 	display: flex;
 }
