--- a/internet-store-frontend/src/app/layout/Header/Header.module.css
+++ b/internet-store-frontend/src/app/layout/Header/Header.module.css
@@ -42,7 +42,7 @@ header{
 	display: flex;
 	background: rgba(121, 109, 226, 1);
 	padding-left: 1.5rem;
-	width: 150px;
+	min-width: 150px;
 	border-radius: 16px;
 	align-items: center;
 	cursor: pointer;
@@ -59,10 +59,17 @@ header{
 }
 
 
+.divSearchInput{
+	width: 100%;
+}
+
+
 .searchButton{
 	padding: 0.6rem;
 	background: rgba(63, 106, 201, 1);
 	border-radius: 18px;
+	min-width: 30px;
+	margin-left: 15px;
 }
 
 
