--- a/internet-store-frontend/src/entities/Comment/FormForSendNewCommentReview.module.css
+++ b/internet-store-frontend/src/entities/Comment/FormForSendNewCommentReview.module.css
@@ -7,7 +7,7 @@
   font-size: 14px;
   padding: 10px;
   width: 97%;
-  height: 107px;
+  height: 190px;
   resize: none;
   border-radius: 10px;
   border: 1px solid rgb(250, 250, 250);
@@ -21,16 +21,10 @@
 
 .commentTextAreaReview{
 	font-size: 16px;
-  padding: 10px;
-  width: 97%;
-  height: 360px;
-  resize: none;
+  padding: 20px;
+  width: 95%;
+  height: 350px;
   border-radius: 30px;
-  border: 1px solid rgb(250, 250, 250);
-	background-color: rgb(250, 250, 250);
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  outline: none;
 }
 
 
@@ -122,14 +116,38 @@
 }
 
 
+.cancelButton{
+	font-size: 15px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 132px;
+  height: 36px;
+  color: white;
+  background: #777777;
+	border: 1px solid #777777;
+  border-radius: 10px;
+  border: 1px solid;
+}
+
+
+.cancelButtonReview{
+	font-size: 17px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  width: 150px;
+  height: 40px;
+  background: #777777;
+  border-radius: 30px;
+  border: 1px solid #777777;
+	color: rgb(255, 255, 255);
+}
+
+
 .buttonReview{
 	font-size: 17px;
   margin-top: 20px;
   margin-bottom: 30px;
   width: 150px;
   height: 40px;
-  color: white;
-  background: linear-gradient(90deg, #5A3DE6 100%, #322280 100%);
   border-radius: 30px;
-  border: 1px solid;
 }
