--- a/internet-store-frontend/src/entities/headerComponents/ui/CategoriesMenu/CategoriesMenu.module.css
+++ b/internet-store-frontend/src/entities/headerComponents/ui/CategoriesMenu/CategoriesMenu.module.css
@@ -47,6 +47,10 @@
   overflow-x: hidden;
 }
 
+.divForCategories::-webkit-scrollbar {
+  display: none;
+}
+
 
 .divForCategories p {
 	height: max-content;
