--- a/internet-store-frontend/src/entities/headerComponents/ui/CategoriesMenu/CategoriesMenu.module.css
+++ b/internet-store-frontend/src/entities/headerComponents/ui/CategoriesMenu/CategoriesMenu.module.css
@@ -1,18 +1,18 @@
 .dropdownMenu {
-	margin-top: 441px;
+	margin-top: 460px;;
   position: absolute;
   background-color: rgba(255, 255, 255, 0.97);
   border-radius: 10px;
   color: black;
   padding-left: 26px;
   padding-right: 26px;
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 	height: 500px;
 }
 
 
 .categoriesHeader{
-	align-items: center;
+	align-items: center !important;
 	display: flex;
 }
 
@@ -28,6 +28,7 @@
 
 
 .closeButton{
+	margin-bottom: -16.5px;
 	cursor: pointer;
 }
 
@@ -68,7 +69,7 @@
 .buttonContainer {
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 10px;
+	margin-top: 30px;
 }
 
 
