--- a/internet-store-frontend/src/pages/shoppingCart/ui/CartSummary.module.css
+++ b/internet-store-frontend/src/pages/shoppingCart/ui/CartSummary.module.css
@@ -5,7 +5,7 @@
 	margin-left: auto;
 	background-color: white;
 	border-radius: 30px;
-	height: 292px;
+	height: 275px;
 	width: 310px;
 }
 
@@ -25,4 +25,8 @@
 	color: #492DBB;
 	margin-left: 58%;
 	text-align: right;
+}
+
+.button{
+	margin-left: -12.5px;
 }
