--- a/internet-store-frontend/src/features/chatList/ui/ChatList.module.css
+++ b/internet-store-frontend/src/features/chatList/ui/ChatList.module.css
@@ -1,26 +1,34 @@
 .chatListContainer {
-  max-height: 100vh; /* Ограничиваем высоту контейнера */
-  overflow-y: scroll; /* Включаем вертикальный скролл */
+  max-height: 100vh;
+  overflow-y: scroll;
   box-sizing: border-box;
   padding-right: 17px;
   scrollbar-width: none;
 }
 
+
 .chat {
   background-color: #e6e6e6;
-  width: 300px;
+  width: 330px !important;
   height: 100px;
   padding-left: 23px;
   padding-right: 23px;
   border: 1px solid #cacaca;
-  box-sizing: border-box;
 }
+
+
+.active{
+	background: linear-gradient(90deg, #584dbd 0%, #3F6AC9 100%);
+	border: 1px solid #3F6AC9;
+}
+
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 
 .chatListContainer {
   max-height: 100vh;
@@ -31,16 +39,18 @@
   scrollbar-color: transparent transparent;
 }
 
+
 .chatListContainer::-webkit-scrollbar {
   width: 0px;
   height: 0px;
 }
 
+
 .chatListContainer::-webkit-scrollbar-thumb {
   background-color: transparent;
 }
 
+
 .chatListContainer::-webkit-scrollbar-track {
   background: transparent;
 }
-
