refactor kode and add fucnk for messages

--- a/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
+++ b/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
@@ -54,6 +54,7 @@
 
 
 .messageText {
+	min-width: 55px;
   background-color: #ddd;
   border-radius: 20px;
   padding: 10px;
@@ -61,6 +62,31 @@
   word-wrap: break-word;
 	white-space: normal;
 	overflow-wrap: break-word;
+	position: relative;
+}
+
+
+.timeAndReadData{
+	display: flex;
+	align-items: center;
+}
+
+
+.messageTime{
+	color: #8c8c8c;
+	font-size: 10px;
+}
+
+
+.readStatusIcon{
+	margin-left: 5px;
+}
+
+
+.messageTimeRight {
+  text-align: right;
+	margin-left: calc(100% - 40px);
+	white-space: nowrap;
 }
 
 
@@ -69,17 +95,19 @@
   margin-left: auto;
 }
 
-.myMessage .messageText {
+
+.myMessage .messageText{
   background-color: #5a3de6;
   color: white;
 }
+
 
 .otherMessage {
   justify-content: flex-start;
 }
 
 .otherMessage .messageText {
-  background-color: #ddd;
+  background-color: #e2e2e2;
   color: black;
 }
 
