--- a/internet-store-frontend/src/entities/headerComponents/ui/CategoriesMenu/CategoriesMenu.module.css
+++ b/internet-store-frontend/src/entities/headerComponents/ui/CategoriesMenu/CategoriesMenu.module.css
@@ -1,7 +1,7 @@
 .dropdownMenu {
 	margin-top: 460px;;
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.97);
+  background-color: rgba(255, 255, 255);
   border-radius: 10px;
   color: black;
   padding-left: 26px;
