add clear cache for admin(when delete or add something) and add categories for info about product detail and quick view info about product

--- a/internet-store-frontend/src/app/global.module.css
+++ b/internet-store-frontend/src/app/global.module.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: 'Fontimer';
+	src: url('/font/AVFontimer-Light-BF66fcaad339543.ttf') format('truetype'); /* Убедись, что путь к файлу правильный */
+}
+
+
 body, html {
 	margin: 0;
 	padding: 0;
