--- a/internet-store-frontend/src/entities/product/ui/QuickView.module.css
+++ b/internet-store-frontend/src/entities/product/ui/QuickView.module.css
@@ -43,11 +43,12 @@
 .nameOfProduct{
 	color: #492DBB;
 	margin-bottom: 50px;
+	font-size: 25px;
 }
 
 
 .priceOfQuickView{
-	margin-bottom: 60px;
+	margin-bottom: 7px;
 }
 
 
