--- a/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
+++ b/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
@@ -106,10 +106,12 @@
   justify-content: flex-start;
 }
 
+
 .otherMessage .messageText {
   background-color: #e2e2e2;
   color: black;
 }
+
 
 .messageRight {
 	width: 70%;
@@ -117,8 +119,14 @@
   justify-content: flex-end;
 }
 
+
 .messageLeft {
 	width: 70%;
   display: flex;
   justify-content: flex-start;
+}
+
+
+.addPhoto{
+	width: 45px;
 }
