refactor form for review and comment also add media for auth pages and add refactor backend

--- a/internet-store-frontend/src/app/layout/MainLayout/MainLayout.module.css
+++ b/internet-store-frontend/src/app/layout/MainLayout/MainLayout.module.css
@@ -18,3 +18,11 @@
   margin-top: 0;
   margin-bottom: 0;
 }
+
+@media (max-width: 768px) {
+	.mainContent{
+		margin-left: 0%;
+  	margin-right: 0%;
+		margin-bottom: 50px;
+	}
+}
