--- a/internet-store-frontend/src/entities/Comment/FormForSendNewCommentReview.module.css
+++ b/internet-store-frontend/src/entities/Comment/FormForSendNewCommentReview.module.css
@@ -36,7 +36,7 @@
 	font-size: 16px;
   padding: 20px;
   width: 95%;
-  height: 350px;
+  height: 350px !important;
   border-radius: 30px;
 }
 
@@ -153,6 +153,7 @@
 
 .cancelButton:hover {
 	background: #999999;
+	border: 1px solid #999999;
 }
 
 
