--- a/internet-store-frontend/src/pages/auth/Auth.module.css
+++ b/internet-store-frontend/src/pages/auth/Auth.module.css
@@ -1,18 +1,17 @@
-.divForAuthForms{
-	width: 510px;
-	height: 450px;
-	margin-left: 29%;
-	border-radius: 30px;
-	background: rgba(255, 255, 255, 1);
+.divForAuthForms, .divForEnterForm{
+	width: 50%;
+  min-width: 510px;
+	max-width: 510px;
+  height: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 30px;
+  background: rgba(255, 255, 255, 1);
 }
 
 
 .divForEnterForm{
-	width: 510px;
 	height: 520px;
-	margin-left: 29%;
-	border-radius: 30px;
-	background: rgba(255, 255, 255, 1);
 }
 
 
@@ -36,4 +35,18 @@
 
 .divForButtons{
 	text-align: center;
+}
+
+
+ @media (max-width: 768px) {
+  .divForAuthForms, .divForEnterForm, .divForRegisterForm {
+    background-color: #e9e9e9;
+		padding: 0px;
+    width: 100%;
+    min-width: 0;
+  }
+
+	.hr{
+		width: 80%;
+	}
 }
