--- a/internet-store-frontend/src/app/layout/Footer/Footer.module.css
+++ b/internet-store-frontend/src/app/layout/Footer/Footer.module.css
@@ -1,5 +1,24 @@
 .footer {
-  background-color: #d1d1d1;
+  background-color: #dddddd;
   width: 100%;
   height: 100px;
+}
+
+.mobile{
+	display: none;
+	padding-top: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+
+@media (max-width: 910px) {
+	.footer{
+		height: 54px;
+		background-color: #e9e9e9;
+	}
+
+	.mobile{
+		display: block;
+	}
 }
