--- a/internet-store-frontend/src/entities/headerComponents/ui/PersonActivities/PersonActivities.module.css
+++ b/internet-store-frontend/src/entities/headerComponents/ui/PersonActivities/PersonActivities.module.css
@@ -47,3 +47,15 @@
 .testForShoppingCart{
 	margin-top: 86px;
 }
+
+
+@media (max-width: 1180px){
+	.personActivities{
+		margin-left: 1.5rem;
+	}
+
+	.shoppingCart{
+		margin-left: 1rem;
+		margin-right: 1.2rem;
+	}
+}
