--- a/internet-store-frontend/src/pages/welcome/WelcomePage.module.css
+++ b/internet-store-frontend/src/pages/welcome/WelcomePage.module.css
@@ -1,6 +1,6 @@
-.divWelcomeHeaderText{
+.divWelcomeHeaderText {
 	display: flex;
-	align-items: center;
+	width: 100%;
 }
 
 
@@ -20,4 +20,11 @@
 	margin-right: 3%;
 	margin-bottom: 70px;
 	text-align: center;
+}
+
+
+@media (max-width: 768px) {
+	.divWelcomeHeaderText{
+		width: 100%;
+	}
 }
