--- a/internet-store-frontend/src/entities/order/ui/OrderCard/OrderCard.module.css
+++ b/internet-store-frontend/src/entities/order/ui/OrderCard/OrderCard.module.css
@@ -21,6 +21,7 @@
   height: 40px;
   display: flex;
   justify-content: space-between;
+	text-align: center;
   font-weight: bold;
 }
 
@@ -32,8 +33,13 @@
 
 
 .status{
-	margin-top: -5px;
 	margin-left: 27px;
+}
+
+
+.sumHeader{
+	height: max-content;
+	margin-top: 22px;
 }
 
 
@@ -78,12 +84,21 @@
 }
 
 
+.productImgMobile{
+	cursor: pointer;
+	margin-right: 10px;
+	width: 97px;
+	height: 85px;
+	border-radius: 15px;
+}
+
+
 .hoverText {
   position: absolute;
   top: 0;
   left: 0;
-  width: 90%;
-  height: 84%;
+  width: 89%;
+  height: 83.4%;
   border-radius: 15px;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
@@ -101,6 +116,32 @@
 .hoverTextP {
   margin-left: 27px;
   margin-top: 50px;
+}
+
+
+.hoverTextMobile{
+	position: absolute;
+  top: 0;
+  left: 0;
+  width: 91%;
+  height: 96%;
+  border-radius: 15px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s;
+  pointer-events: none;
+}
+
+
+.productImageContainer:hover .hoverTextMobile{
+	opacity: 1;
+}
+
+
+.hoverTextPMobile{
+	margin-left: 13.5px;
+	margin-top: 35px;
 }
 
 
@@ -150,4 +191,5 @@
   font-size: 16px;
   border-radius: 20px;
   cursor: pointer;
+	margin-left: -5px;
 }
