--- a/internet-store-frontend/src/shared/ui/OrderStatus/OrderStatus.module.css
+++ b/internet-store-frontend/src/shared/ui/OrderStatus/OrderStatus.module.css
@@ -5,11 +5,26 @@
 
 
 .img{
-	margin-top: 20px;
+	margin-top: 15px;
 }
 
 
 .text{
 	color: #5A3DE6;
 	margin-left: 10px;
+}
+
+
+@media (max-width: 600px) {
+	.text{
+		font-size: 17px;
+		margin-left: 10px;
+		margin-top: 25px;
+	}
+
+	.img{
+		width: 25px;
+		height: 25px;
+		margin-top: 20px;
+	}
 }
