--- a/internet-store-frontend/src/entities/cartItem/CartItem.module.css
+++ b/internet-store-frontend/src/entities/cartItem/CartItem.module.css
@@ -7,9 +7,24 @@
 }
 
 
+.cartItemMobile{
+	background-color: white;
+	border-radius: 30px;
+}
+
+
+.dataOfCartItemMobile {
+	min-width: 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	flex-grow: 1;
+}
+
+
 .imgOfItem{
 	width: 135px;
-	height: 135px;
+	height: 125px;
 	border-radius: 30px;
 }
 
@@ -48,7 +63,7 @@
 
 
 .active{
-	background-color: #e1e7ff;
+	background-color: #d1daff;
 	border-radius: 30px;
 }
 
@@ -101,5 +116,63 @@
 
 	.quantityOfItem{
 		margin-left: 25px;
+	}
+}
+
+
+@media (max-width: 910px){
+	.divOfCartItems{
+		padding-left: 0px;
+	}
+
+	.imgOfItem{
+		margin-left: -6px;
+	}
+
+	.priceOfItem{
+		margin-top: -5px;
+		margin-left: 20px;
+	}
+
+	.quantityOfItem{
+		margin-left: 10px !important;
+		margin-top: -8px;
+	}
+
+	.trashCan{
+		margin-top: -60px;
+		margin-right: -15px;
+	}
+}
+
+
+@media (max-width: 580px){
+	.divOfCartItems{
+		min-width: 10%;
+	}
+
+	.imgOfItem{
+		width: 115px;
+		height: 105px;
+		border-radius: 30px;
+	}
+
+	.dataOfCartItemMobile {
+		margin-top: -10px;
+		/* flex-grow: 0; */
+		width: auto !important;
+		min-width: 20px
+	}
+
+	.trashCan{
+		margin-top: -50px;
+		margin-right: -15px;
+	}
+}
+
+
+@media (max-width: 420px){
+	.quantityOfItem{
+		margin-left: 20px !important;
 	}
 }
