--- a/internet-store-frontend/src/entities/product/ui/ProductCard.module.css
+++ b/internet-store-frontend/src/entities/product/ui/ProductCard.module.css
@@ -101,3 +101,32 @@
 		margin-top: 25px;
 	}
 }
+
+
+@media (max-width: 370px) {
+	.productCard{
+		background-color: white;
+		width: 140px;
+		height: 250px;
+	}
+
+	.imgOfProduct{
+		width: 129px;
+		height: 110px;
+	}
+
+	.nameOfProduct{
+		color: #492DBB;
+		cursor: pointer;
+		height: 28px !important;
+		font-size: 15px;
+	}
+
+	.productPrice{
+		font-size: 18px;
+	}
+
+	.actions{
+		margin-top: 25px;
+	}
+}
