--- a/internet-store-frontend/src/shared/ui/Button.module.css
+++ b/internet-store-frontend/src/shared/ui/Button.module.css
@@ -89,3 +89,15 @@
 		height: 25px;
 	}
 }
+
+
+@media (max-width: 370px) {
+  .iconButton{
+		width: 90px;
+		height: 30px;
+	}
+
+	.icon{
+		margin-top: -15px;
+	}
+}
