--- a/internet-store-frontend/src/shared/ui/Heart/Heart.module.css
+++ b/internet-store-frontend/src/shared/ui/Heart/Heart.module.css
@@ -41,3 +41,21 @@
 		margin-left: 7px;
 	}
 }
+
+
+@media (max-width: 370px){
+	.liked {
+		width: 30px;
+		height: 30px;
+	}
+
+	.notLiked {
+		width: 30px;
+		height: 30px;
+	}
+
+	.heartIcon {
+		margin-top: 7.5px;
+		margin-left: 5px;
+	}
+}
