--- a/internet-store-frontend/src/entities/order/ui/OrderDetail.module.css
+++ b/internet-store-frontend/src/entities/order/ui/OrderDetail.module.css
@@ -8,19 +8,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-	z-index: 9999;
+	width: 100vw;
+  height: 100vh;
+	z-index: 9999999;
 }
 
 
 .detailsContainer {
-  background: white;
+  background: #FFFFFF;
   padding-left: 20px;
 	padding-right: 20px;
   border-radius: 8px;
-  width: 80%;
-	height: 80%;
+  width: 85%;
+	height: 85%;
+	max-height: 700px;
   max-width: 500px;
-	overflow: hidden;
 }
 
 
@@ -28,20 +30,71 @@
 	height: max-content;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 }
 
 
 .cross{
-	margin-left: 50%;
 	margin-bottom: 30px;
+	margin-right: 20px;
 	width: max-content;
 	height: max-content;
-	background-color: red;
 }
 
 
 .orderId{
-	margin-top: 40px;
+	margin-top: 20px;
 }
 
 
+.totalPriceAndNavigateToChat {
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+  height: 77px;
+  width: calc(100% + 10px);
+  background-color: white;
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+	margin-left: -20px;
+	margin-right: -20px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 15px;
+	padding-bottom: 1px;
+}
+
+
+.totalPrice{
+	color: #492DBB;
+	font-size: large;
+	font-weight: 600;
+}
+
+
+.orderButton{
+	color: white;
+  background: linear-gradient(90deg, #5A3DE6 0%, #3F6AC9 100%);
+  font-size: 16px;
+  border: none;
+  height: 55px;
+	width: 55px;
+  border-radius: 20px;
+}
+
+
+.orderChatImg{
+	margin-left: -2px;
+	margin-top: 3px;
+}
+
+
+/* @media (max-width: 510px){
+	.detailsContainer {
+		padding-left: 5px;
+		padding-right: 5px;
+		border-radius: 8px;
+		width: 80%;
+		height: 80%;
+	}
+} */
