--- a/internet-store-frontend/src/features/categoriesMenuMobileElement/ui/CategoriesMenuMobileElement.module.css
+++ b/internet-store-frontend/src/features/categoriesMenuMobileElement/ui/CategoriesMenuMobileElement.module.css
@@ -7,7 +7,7 @@
   background-color: white;
 	border: 3px solid white;
 	width: 187px;
-	max-height: 135px;
+	max-height: 0px;
   border-radius: 30px;
   text-align: center;
   display: flex;
@@ -37,5 +37,12 @@
 @media (max-width: 480px) {
 	.categoryElement {
 		width: 80px;
+	}
+}
+
+
+@media (max-width: 380px) {
+	.categoryElement {
+		width: 50px !important;
 	}
 }
