--- a/internet-store-frontend/src/pages/welcome/WelcomePage.module.css
+++ b/internet-store-frontend/src/pages/welcome/WelcomePage.module.css
@@ -1,13 +1,13 @@
 .divWelcomeHeaderText {
 	display: flex;
 	width: 100%;
+	justify-content: center;
 }
 
 
 .dotImg{
 	margin-top: 24px;
-	margin-left: 38%;
-	margin-right: 1%;
+	margin-right: 7px;
 }
 
 
