refactor logic and add ui/ux for mobile detail product page

--- a/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ProductDetail.module.css
+++ b/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ProductDetail.module.css
@@ -66,3 +66,12 @@
     display: block !important;
   }
 }
+
+
+@media (max-width: 1110px) {
+	.imgOfProductDetail{
+		width: 450px;
+		height: 410px;
+		border-radius: 30px;
+	}
+}
