--- a/internet-store-frontend/src/pages/auth/Auth.module.css
+++ b/internet-store-frontend/src/pages/auth/Auth.module.css
@@ -1,22 +1,30 @@
+.returnArrowDiv{
+	padding-top: 15px;
+	padding-left: 15px;
+	position: absolute;
+	display: block;
+}
+
+
 .divForAuthForms, .divForEnterForm{
 	width: 50%;
   min-width: 510px;
 	max-width: 510px;
-  height: 450px;
+  height: 410px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 30px;
-  background: rgba(255, 255, 255, 1);
+  background: rgb(255, 255, 255);
 }
 
 
 .divForEnterForm{
-	height: 520px;
+	height: 510px;
 }
 
 
 .divForRegisterForm{
-	height: 745px;
+	height: 695px;
 }
 
 
@@ -38,12 +46,20 @@
 }
 
 
+@media (max-width: 910px) {
+	.returnArrowDiv{
+		display: none;
+	}
+}
+
+
  @media (max-width: 768px) {
   .divForAuthForms, .divForEnterForm, .divForRegisterForm {
     background-color: #e9e9e9;
 		padding: 0px;
     width: 100%;
     min-width: 0;
+		height: max-content;
   }
 
 	.hr{
