--- a/internet-store-frontend/src/shared/ui/Input/Input.module.css
+++ b/internet-store-frontend/src/shared/ui/Input/Input.module.css
@@ -27,8 +27,8 @@
 
 
 .inputWrapper{
-	padding-top: 1.3rem;
-	padding-bottom: 1.3rem;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 	padding-right: 1.3rem;
 	display: flex;
   justify-content: center;
@@ -56,4 +56,12 @@
 	margin-top: 70px;
 	text-align: left;
 	margin-left: 20px;
+}
+
+
+@media (max-width: 768px) {
+	.inputWrapper{
+		padding-top: 0.7rem;
+		padding-bottom: 0.7rem;
+	}
 }
