--- a/internet-store-frontend/src/entities/ImagesCarouselReviewComment/ui/ImagesCarouselReviewComment.module.css
+++ b/internet-store-frontend/src/entities/ImagesCarouselReviewComment/ui/ImagesCarouselReviewComment.module.css
@@ -3,10 +3,12 @@
   flex-direction: column;
   align-items: center;
   margin-right: 3%;
+  margin-top: 2%;
+  height: max-content;
 }
 
 .changePhotoUp {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   cursor: pointer;
 }
 
@@ -25,16 +27,17 @@
 }
 
 .changePhotoDown {
-  margin-top: 20px;
+  margin-top: 15px;
   cursor: pointer;
 }
 
 .scrollWrapper {
   width: 124px;
-  height: 310px;
+  max-height: 350px;
   overflow-y: scroll;
   margin-top: 10px;
   scrollbar-width: none;
+  height: max-content;
 }
 
 .scrollWrapper::-webkit-scrollbar {
