--- a/internet-store-frontend/src/entities/headerComponents/ui/ProfileMenu/ProfileMenu.module.css
+++ b/internet-store-frontend/src/entities/headerComponents/ui/ProfileMenu/ProfileMenu.module.css
@@ -4,7 +4,7 @@
 	position: absolute;
 	background-color: rgba(255, 255, 255, 0.95);
 	width: 260px;
-	height: 345px;
+	height: max-content;
 	border-radius: 20px;
 	color: black;
 	text-align: left;
