--- a/internet-store-frontend/src/entities/product/ui/ProductMobileActionButtonCart.module.css
+++ b/internet-store-frontend/src/entities/product/ui/ProductMobileActionButtonCart.module.css
@@ -1,6 +1,6 @@
 .overlay {
   position: fixed;
-  top: 82%;
+  top: calc(100% - 150px);
   left: 0;
   right: 0;
   bottom: 0;
@@ -18,6 +18,7 @@
   border-radius: 8px;
   width: 100%;
   max-height: 80px;
+  border-top: 1px solid #e9e9e9;
 }
 
 
