--- a/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ReviewCommentData.module.css
+++ b/internet-store-frontend/src/pages/infoAboutProductDetail/ui/ReviewsContainer/ReviewCommentData.module.css
@@ -1,6 +1,7 @@
 .review{
 	display: flex;
 	overflow: hidden;
+	width: 100%;
 }
 
 
@@ -18,6 +19,7 @@
 .dataReview{
 	margin-top: -15px;
 	margin-left: 10px;
+	width: 100%;
 }
 
 
