--- a/internet-store-frontend/src/entities/Comment/FormForSendNewCommentReview.module.css
+++ b/internet-store-frontend/src/entities/Comment/FormForSendNewCommentReview.module.css
@@ -1,22 +1,31 @@
 .replyForm {
-  width: 855px;
+  width: 100%;
+  max-width: 850px;
 }
 
 
 .commentTextArea {
   font-size: 14px;
   padding: 10px;
-	padding-bottom: 70px;
-  width: 97%;
+  width: 100% !important;
   height: 190px;
   resize: none;
-  border-radius: 10px;
+  border-radius: 30px;
   border: 1px solid rgb(250, 250, 250);
 	background-color: rgb(250, 250, 250);
   min-height: 107px;
   white-space: pre-wrap;
   word-wrap: break-word;
+  box-sizing: border-box;
   outline: none;
+  gap: 1rem;
+}
+
+.editorScrollWrapper {
+  max-height: 300px;
+  overflow-y: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 
@@ -29,17 +38,6 @@
 .commentTextArea::-webkit-scrollbar {
   display: none;
 }
-
-
-.commentTextAreaReview{
-	padding-bottom: 70px;
-	font-size: 16px;
-  padding: 20px;
-  width: 95%;
-  height: 350px !important;
-  border-radius: 30px;
-}
-
 
 .answerUsername{
 	color: #492DBB;
@@ -96,6 +94,7 @@
 	visibility: hidden;
 }
 
+
 .imageContainer:hover .removeImageButton {
   opacity: 1;
   visibility: visible;
@@ -118,14 +117,12 @@
 
 .button {
 	font-size: 15px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 30px !important;
   width: 132px;
   height: 36px;
   color: white;
   background: linear-gradient(90deg, #5A3DE6 100%, #322280 100%);
   border-radius: 10px;
-  border: 1px solid;
 	padding-top: 7.5px;
 }
 
@@ -138,8 +135,7 @@
 
 .cancelButton{
 	font-size: 15px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-top: 30px;
   width: 132px;
   height: 36px;
   color: white;
@@ -159,8 +155,7 @@
 
 .cancelButtonReview{
 	font-size: 17px;
-  margin-top: 20px;
-  margin-bottom: 30px;
+  margin-top: 30px;
   width: 150px;
   height: 40px;
   background: #777777;
@@ -178,8 +173,37 @@
 .buttonReview{
 	font-size: 17px;
   margin-top: 20px;
-  margin-bottom: 30px;
   width: 150px;
   height: 40px;
   border-radius: 30px;
+}
+
+
+@media (max-width: 910px){
+  .commentTextArea {
+    max-height: 200px;
+  }
+
+  .editorScrollWrapper {
+    max-height: 150px;
+    overflow-y: auto;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+}
+
+
+@media (max-width: 500px){
+  .commentTextArea {
+    max-height: 220px;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .buttons button{
+    width: 100%;
+  }
 }
