--- a/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
+++ b/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
@@ -1,35 +1,38 @@
-.chatMessagesContainer {
-  background-color: #f4f6f9;
-  border: 1px solid black;
-  height: 86.6vh;
-  width: 95%;
+.chatMessages {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   position: relative;
-  box-sizing: border-box;
 }
 
 
 .messagesWrapper {
-	padding-top: 20px;
-  max-height: calc(100% - 100px);
+  flex: 1;
+  padding-top: 20px;
+  padding-bottom: 10px;
   overflow-y: auto;
-  display: flex;
-  flex-direction: column;
+  max-height: calc(100vh - 330px);
 }
+
+
+.messagesWrapper::-webkit-scrollbar {
+  display: none;
+}
+
 
 .messageInput {
   padding-left: 17px;
   padding-right: 17px;
   padding-bottom: 7px;
   padding-top: 7px;
-  position: absolute;
-  bottom: 0px;
   width: 100%;
   height: 63px;
   display: flex;
-  text-align: center;
   border-top: 1px solid #ddd;
   background-color: #796DE2;
-	box-sizing: border-box;
+  box-sizing: border-box;
+  position: fixed;
+  bottom: 100px;
 }
 
 
@@ -44,6 +47,20 @@
 }
 
 
-.addPhoto{
-	width: 45px;
+.addPhoto {
+  width: 45px;
+}
+
+@media (max-width: 910px) {
+  .messageInput{
+    bottom: 71px;
+  }
+
+  .messagesWrapper {
+    flex: 1;
+    padding-top: 20px;
+    padding-bottom: 100px;
+    overflow-y: auto;
+    max-height: calc(100vh - 300px);
+  }
 }
