--- a/internet-store-frontend/src/shared/ui/AddRemoveQuantityOfProducts/AddRemoveQuantityOfProducts.module.css
+++ b/internet-store-frontend/src/shared/ui/AddRemoveQuantityOfProducts/AddRemoveQuantityOfProducts.module.css
@@ -7,6 +7,13 @@
 }
 
 
+.divOfaddRemoveQuantityOfProducts.mobile{
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+
 .countButton{
 	width: 45px;
 	height: 45px;
