refactor product detail page

--- a/internet-store-frontend/src/entities/commentActions/CommentActions.module.css
+++ b/internet-store-frontend/src/entities/commentActions/CommentActions.module.css
@@ -1,3 +1,11 @@
+.divReviewCommentActionsMobile{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+
 .divReviewCommentActions{
 	display: flex;
 	align-items: center;
