--- a/internet-store-frontend/src/features/review/ReviewMobile.module.css
+++ b/internet-store-frontend/src/features/review/ReviewMobile.module.css
@@ -1,14 +1,25 @@
-.imagesCommentReview{
-	margin-top: 16px;
-	margin-left: 90px;
-	position: absolute;
+.review{
 	display: flex;
-	z-index: 0;
+}
+
+
+.heartReview{
+	margin-bottom: 100px;
+	margin-left: auto;
+}
+
+
+.divForComments{
+	margin-left: 63px;
+}
+
+
+.imagesCommentReview{
+	display: flex;
 }
 
 
 .imgageCommentReview{
-	cursor: pointer;
 	margin-right: 5px;
 	width: 50px;
 	height: 50px;
