--- a/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
+++ b/internet-store-frontend/src/features/chatMessages/ui/ChatMessages.module.css
@@ -44,12 +44,24 @@
   padding: 10px;
   border: 1px solid #ffffff;
   border-radius: 35px;
+  outline: none;
 }
 
 
 .addPhoto {
   width: 45px;
 }
+
+
+.messageInputField{
+  font-size: 15px;
+}
+
+
+.messageInputField::placeholder{
+  font-size: 16px;
+}
+
 
 @media (max-width: 910px) {
   .messageInput{
