--- a/internet-store-frontend/src/pages/chat/ui/ChatPage.module.css
+++ b/internet-store-frontend/src/pages/chat/ui/ChatPage.module.css
@@ -29,9 +29,15 @@
   bottom: 0;
   width: max-content;
   background: white;
-  z-index: 100;
+  z-index: 99999;
   transition: transform 0.3s ease;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
+}
+
+
+.orderInfo{
+  min-width: 250px !important;
+  max-width: 300px;
 }
 
 
@@ -55,10 +61,9 @@
 
 .menuToggleButtonLeft, .menuToggleButtonRight {
   position: absolute;
-  top: 150px;
-  z-index: 101;
-  background: #593de6b3;
+  background: #3f6bc9bb;
   border: none;
+  top: calc(100vh - 60vh);
   width: 30px;
   height: 30px;
   font-size: 20px;
@@ -71,21 +76,28 @@
 
 
 .menuToggleButtonLeft:hover, .menuToggleButtonRight:hover {
-  background: #593de6;
+  background: #3F6AC9;
+}
+
+
+.menuToggleButtonLeft:disabled,
+.menuToggleButtonRight:disabled {
+  opacity: 0.5;
+  cursor: default;
 }
 
 
 .menuToggleButtonLeft {
-  left: 0px;
-  border-top-left-radius: 0px;
-  border-bottom-left-radius: 0px;
+  right: -30px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 
 .menuToggleButtonRight {
-  right: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
+  left: -30px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 
@@ -96,7 +108,7 @@
   right: 0;
   bottom: 0;
   background: rgba(0,0,0,0.5);
-  z-index: 99;
+  z-index: 9999;
 }
 
 
